# simple-llm-bot

./: .dockerignore  .env.local.example  .env.remote.example  .gitignore  Dockerfile  README.md  compose.dev.yml  compose.local.yml  compose.remote.yml  compose.yml  main.py  pyproject.toml
quickllmbot/: llm.py  strings.py
src/: main.py
src/quickllmbot/: __init__.py  bot.py  llm.py  strings.py
