[project]
name = "quick-llm-bot"
version = "0.1.0"
description = "Simple and easy-to-deploy Telegram bot for LLM inference"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pdf-oxide>=0.3.46",
    "python-telegram-bot>=22.7",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.34",
]
